# ccss2edr

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.py
ccss2edr/: ccss2edr.py  cgats.py  dumpedr.py  edr.py  record.py
